# aegis-phalanx

./: .env.example  .gitignore  AGENTS.md  Containerfile  Makefile  README.md  compose.yml  plano_arquitetural_agente.md  podman-compose.yml  pyproject.toml  system_prompt.txt  telegram_listener.py  test_agents.py  test_coverage_boost.py  test_telegram_listener.py  test_tool_infrastructure.py
.agents/: AGENTS.md
agents/: __init__.py  base.py  config.py  pipeline.py  registry.py  review_pipeline.py  tool_specs.py
agents/adapters/: agy.py  aider.py  claude.py  cursor.py
agents/auth/: __init__.py  cursor.py
scripts/: install_agent_tool.py  render_compose_overlay.py
